# avd-fw

./: Makefile  arm-none-eabi-gcc.ini  avd-cm3.ld  llvm.ini  main.c  meson.build
.github/workflows/: ci.yml
src/: avd.c  avd.h  irq.c  irq.h  main.c  memmap.h  piodma.c  piodma.h  util.c  util.h
src/hw/reg/: reg.h  reg_common.h  reg_v2.h  reg_v3.h  reg_v5.h
src/hw/tunables/: tunables.h  tunables_common.h  tunables_v2.h  tunables_v3.h  tunables_v3t0.h  tunables_v3t1.h  tunables_v4.h  tunables_v5.h  tunables_v5t0.h  tunables_v5t1.h  tunables_v5t2.h
